--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
   "devDependencies": {
     "gulp": "^3.8.10",
     "gulp-rename": "^1.2.0",
-    "gulp-uglify": "^1.0.2"
+    "gulp-uglify": "^1.0.2",
+    "leaflet": "^1.2.0",
+    "leaflet-draw": "^0.4.12"
   }
 }
